fix sing-up pages

--- a/src/app/pages/public/auth/sign-up/sign-up.component.html
+++ b/src/app/pages/public/auth/sign-up/sign-up.component.html
@@ -15,6 +15,6 @@
     <span class="error">{{passwordReplayError()}}</span>
   </div>
 
-  <button [disabled]="!signUpForm.valid" type="submit">зарегестрироваться</button>
+  <button [disabled]="!signUpForm.valid || passwordReplayError()" type="submit">зарегестрироваться</button>
 
 </form>
