--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,11 +1,11 @@
 <header>
-  <a routerLink="/" class="logo">MC-SITE</a>
-  <div class="btn">
-    <button class="download">
-      <lucide-icon name="download" [size]="22"></lucide-icon>
-      Скачать лаунчер
-    </button>
-    <a routerLink="/sign-in" routerLinkActive="active">Войти</a>
-    <a routerLink="/sign-up" routerLinkActive="active">Зарегестрироваться</a>
-  </div>
+  <img src="kubercraft-06-08-2024.png" height="207" width="1024" alt="logo"/>
+  <menu class="nav-menu">
+    <a routerLinkActive="active" class="nav-menu_item">главная</a>
+    <a routerLinkActive="active" class="nav-menu_item">правила</a>
+    <a routerLinkActive="active" class="nav-menu_item">донат</a>
+    <a routerLinkActive="active" class="nav-menu_item">сервера</a>
+    <a routerLinkActive="active" class="nav-menu_item">бан-лист</a>
+    <a routerLinkActive="active" class="nav-menu_item">магазин</a>
+  </menu>
 </header>
