--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,5 +1,11 @@
 <section>
   <app-header></app-header>
+  <div class="alt-auth">
+    <button class="alt-auth_btn" (click)="authVisible = !authVisible">Авторизоваться</button>
+    @if (authVisible){
+      <app-sign-in></app-sign-in>
+    }
+  </div>
   <main>
     <div class="left">
       <router-outlet></router-outlet>
