--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
     <a routerLink="/rules" routerLinkActive="active" class="nav-menu_item">правила</a>
     <a routerLinkActive="active" class="nav-menu_item">донат</a>
     <a routerLinkActive="active" class="nav-menu_item">сервера</a>
-    <a routerLinkActive="active" class="nav-menu_item">бан-лист</a>
+    <a routerLink="/ban-list" routerLinkActive="active" class="nav-menu_item">бан-лист</a>
     <a routerLinkActive="active" class="nav-menu_item">магазин</a>
   </menu>
 </header>
