--- a/src/app/layout/layout.component.scss
+++ b/src/app/layout/layout.component.scss
@@ -36,3 +36,11 @@ main{
 .alt-auth_btn{
   @apply mb-2.5 w-full text-center bg-sky-900 rounded-tl-lg rounded-br-lg py-2.5 mt-5 text-xl font-semibold text-gray-200;
 }
+
+@at-root {
+  body{
+    @apply min-h-full bg-no-repeat bg-cover bg-center;
+    background-image: url("../../../public/kubercraft-fon.jpg");
+  }
+}
+
