--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,6 @@ html{
 
 body{
   min-height: 100vh;
-  //@apply min-h-full bg-no-repeat bg-cover bg-center;
-  //background-image: url("../public/kubercraft-fon.jpg");
+  @apply min-h-full bg-no-repeat bg-cover bg-center;
+  background-image: url("../public/kubercraft-fon.jpg");
 }
