добавлена страница регестрации

--- a/src/app/auth/sign-in/sign-in.component.html
+++ b/src/app/auth/sign-in/sign-in.component.html
@@ -8,6 +8,6 @@
   <button class="login">войти в акаунт</button>
   <div class="buttons">
     <a class="btn">Забыли пароль?</a>
-    <a class="btn">Зарегестрироваться</a>
+    <a class="btn" routerLink="/sign-up">Зарегестрироваться</a>
   </div>
 </form>
