--- a/src/app/auth/sign-in/sign-in.component.scss
+++ b/src/app/auth/sign-in/sign-in.component.scss
@@ -1,5 +1,5 @@
 form {
-  @apply w-full px-2.5 bg-gray-600/65 py-5 rounded-tl-lg rounded-br-lg;
+  @apply w-full px-2.5 bg-gray-600/80 py-5 rounded-lg;
 
 }
 
@@ -39,4 +39,8 @@ input {
       @apply no-underline;
     }
   }
+}
+
+.error{
+  @apply text-sm text-gray-200 font-medium;
 }
