--- a/src/app/auth/sign-up/sign-up.component.scss
+++ b/src/app/auth/sign-up/sign-up.component.scss
@@ -1,5 +1,5 @@
 form {
-  @apply w-full px-2.5 bg-gray-600/65 py-5 rounded-tl-lg rounded-br-lg;
+  @apply w-full px-2.5 bg-gray-600/85 py-5 rounded-lg;
 
 }
 
@@ -21,5 +21,9 @@ input {
 
 .btn {
   @apply w-full text-center bg-sky-900 rounded-tl-lg rounded-br-lg py-2.5 mt-5 text-xl font-semibold text-gray-200;
+}
+
+.error{
+  @apply text-base text-gray-200 font-medium;
 }
 
