--- a/src/app/components/monitoring/monitoring.component.scss
+++ b/src/app/components/monitoring/monitoring.component.scss
@@ -1,5 +1,5 @@
 section{
-  @apply w-full px-2.5 bg-gray-600/65 py-5 rounded-tl-lg rounded-br-lg;
+  @apply w-full px-2.5 bg-gray-600/65 py-5 rounded-lg;
 }
 
 h1{
